Update public endpoint names in SecurityConfig